--- a/css/style.css
+++ b/css/style.css
@@ -1,234 +1,304 @@
-.body{
-    background:white;
+.body {
+  background: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
-.container{
-    padding: 0 35px;   
-    max-width: 951px;
-    
+.container {
+  padding: 0 35px;
+  max-width: 951px;
 }
-.header-inner{
-    font-family: Sans-serif;
-    padding-bottom: 40px;
-    border-bottom: 2px solid #cbcbcb;
+.header-inner {
+  font-family: Sans-serif;
+  padding-bottom: 40px;
+  border-bottom: 1px solid #cbcbcb;
 }
-.header-inner h3{
-    margin: 0;
-    padding-top: 22px;
-    font-size: 26px;
+.header-inner h3 {
+  margin: 0;
+  padding-top: 22px;
+  font-size: 26px;
 }
-.string{
-    font-size: 55px;
-    font-weight: 500;
-    font-family: sans-serif;
-    padding-top: 17px;
+.string {
+  font-size: 55px;
+  font-weight: 500;
+  font-family: sans-serif;
+  padding-top: 17px;
 }
-.re-education
-{
-    font-size: 28px;
-    padding-top: 13px;
+.re-education {
+  font-size: 28px;
+  padding-top: 13px;
 }
-.calculation{
-    font-size: 21px;
-    padding-top: 17px;
+.calculation {
+  font-size: 21px;
+  padding-top: 17px;
 }
-.guidance_tools{
-    font-size: 14px;
-    padding-top: 6px;
-    font-weight: 600;
+.guidance_tools {
+  font-size: 14px;
+  padding-top: 6px;
+  font-weight: 600;
 }
-.quantity{
-    font-size: 17px;
-    padding-top: 6px;
-    font-weight: 600;
+.quantity {
+  font-size: 17px;
+  padding-top: 6px;
+  font-weight: 600;
 }
-.text-and-writes-inner
-{
-    padding-bottom: 40px;
-    border-bottom: 2px solid #cbcbcb;
+.text-and-writes-inner {
+  padding-bottom: 40px;
+  border-bottom: 1px solid #cbcbcb;
 }
-.text-and-writes-inner h3{
-    font-size: 28px;
-    margin: 0;
-    padding-top: 22px;
+.text-and-writes-inner h3 {
+  font-size: 28px;
+  margin: 0;
+  padding-top: 22px;
 }
-.text1{
-    padding-top: 32px;
-
+.text1 {
+  padding-top: 32px;
 }
-.text2{
-    padding-top: 12px;
-    max-width: 536px;
+.text2 {
+  padding-top: 12px;
+  max-width: 536px;
 }
-.text3{
-    padding-top: 13px;
-    color: #c7c8cc;
+.text3 {
+  padding-top: 13px;
+  color: #999999;
 }
-.text4{
-    border: 1px solid red;
-    border-radius: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: red;
+.text4 {
+  border: 1px solid red;
+  border-radius: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: red;
 }
-._div_qes{
-    width:20px;
-    height: 20px;
-    /* border: 1px solid red; */
-    /* border-radius: 100%; */
-    padding-top: 7px;
+._div_qes {
+  width: 20px;
+  height: 20px;
+  /* border: 1px solid red; */
+  /* border-radius: 100%; */
+  padding-top: 7px;
+  cursor: pointer;
 }
-.buttons-inner{
-    padding-bottom: 60px;
-    border-bottom: 2px solid #cbcbcb;
+.buttons-inner {
+  padding-bottom: 60px;
+  border-bottom: 1px solid #cbcbcb;
 }
-.buttons a{
-    text-decoration: none;
-    font-size:17px;
+button {
+  border: none;
 }
-.btn{
-    border-radius: 3px;
-    margin-top:21px;
-    margin-right: 3px;
+.btn {
+  border-radius: 3px;
+  margin-right: 6px;
 }
 
-.div_btn_twice1, .div_btn_twice2 , .div_btn_twice3{
-    display:flex;
+.div_btn_twice1,
+.div_btn_twice2,
+.div_btn_twice3 {
+  display: flex;
 }
-.buttons h3{
-    font-size:27px;
-    padding-top: 21px;
-    margin:0;
+
+.div_btn_twice1 {
+  padding-top: 27px;
+  margin-bottom: 18px;
 }
-.button1
-{
-    background: #FFE152;
-    width: 160px;
-    height: 43px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.div_btn_twice2 {
+  margin-bottom: 18px;
 }
-.button1 a{
-    color:black;
+.div_btn_twice3 {
+  display: flex;
+  align-items: center;
 }
-.button2
-{
-    background:#f41939;
-    width: 160px;
-    height: 43px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.button1:hover,
+.button1:active {
+  background: rgb(251, 220, 80, 0.5);
 }
-.button2 a{
-    color:white;
+.button2:hover,
+.button2:active {
+  background: rgb(244, 25, 57, 0.5);
 }
-.button3{
-    background:#2c87f9;
-    width: 250px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.button3:hover,
+.button3:active {
+  background: rgb(44, 135, 249, 0.5);
 }
-.button3 a{
-    color:white;
+.button4:hover,
+.button4:active {
+  background: rgb(144, 52, 249, 0.5);
 }
-.button4{
-    background:#9034f9;
-    width: 214px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.button5:hover,
+.button5:active {
+  background: #f4f4f4;
 }
-.button4 a{
-    color:white;
+.button6:hover,
+.button6:active {
+  background: rgb(251, 220, 80, 0.5);
+  border: none;
+  box-shadow: none;
 }
-.button5{
-    border:1px solid #819bce;
-    width: 166px;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.buttons h3 {
+  font-size: 27px;
+  padding-top: 27px;
+  margin: 0;
 }
-.button5 a{
-    color:#819bce;
+.button1 {
+  background: #ffe152;
+  width: 160px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
 }
-.button6{
-    background:#fbdc50;
-    border-bottom: 1px solid #d3aa52;
-    width: 218px;
-    height: 48px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.button2 {
+  background: #f41939;
+  width: 160px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: white;
 }
-.button6 a{
-    color:black;
+.button3 {
+  background: #2c87f9;
+  width: 256px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: white;
 }
-.links-inner{
-    font-family: Sans-serif;
-    padding-bottom: 45px;
-    border-bottom: 2px solid #cbcbcb;
+.button4 {
+  background: #9034f9;
+  width: 214px;
+  height: 36px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 14px;
 }
-.links-column{
-    display:flex;
-    flex-direction: column;
-    gap:12px;
-    font-size: 15px;
+
+.button5 {
+  border: 1px solid #819bce;
+  width: 166px;
+  height: 34px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #819bce;
+  background: white;
 }
-.link1, .link2, .link3 , .link4 ,.link5 ,.link6{
-    color:#389bec;
-} 
-.link7 ,.link8 ,.link9 ,.link10{
-    color:#d62339;
+.button5 button {
+  color: #819bce;
 }
-.link11, .link12,.link13,.link14{
-    color:#838c95;
+.button6 {
+  background: #fbdc50;
+  border-bottom: 3px solid #d3aa52;
+  width: 218px;
+  height: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
 }
-.link15{
-    color:#838c95;
-    font-size: 11px;
+
+.links-inner {
+  font-family: Sans-serif;
+  padding-bottom: 45px;
+  border-bottom: 1px solid #cbcbcb;
 }
-.links-inner h3{
-font-size:24px;
+.links-column {
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  font-size: 15px;
+  text-decoration: none;
 }
-.field-inner{
-    font-family: Sans-serif;
-    padding-bottom: 45px;
+.links-column:hover {
+  text-decoration: none;
 }
-.div_input{
-    font-size: 15px;
-    margin-bottom: 23px;
+.link:hover,
+.link:active {
+  text-decoration: none;
 }
-.field-inner h3{
-    padding-top: 6px;
-    font-size: 25px;
+.blue {
+  color: #389bec;
 }
-.small-text{
-    font-size: 10px;
-    padding-left: 14px;
-    padding-top:5px;
+.red {
+  color: #d62339;
 }
-.input-field{
-    padding-left: 10px;
-    width:206px;
-    height: 35px;
-    box-sizing: border-box;
-    border: 1px solid #e6e6e6;
-    border-radius: 4px;
+.grey {
+  color: #838c95;
 }
-.calendar-input{
-    padding-left: 10px;
-    width:153px;
-    height: 35px;
-    box-sizing: border-box;
-    border: 1px solid #e6e6e6;
-    border-radius: 4px;
+.solid {
+  text-decoration: underline solid;
 }
+.dashed {
+  text-decoration: underline dashed;
+}
+.dotted {
+  text-decoration: underline dotted;
+}
+.opasity_solid_blue {
+  text-decoration: underline solid rgb(56, 155, 236, 0.5);
+}
+.opasity_dashed_blue {
+  text-decoration: underline dashed rgb(56, 155, 236, 0.5);
+}
+.opasity_dotted_blue {
+  text-decoration: underline dotted rgb(56, 155, 236, 0.5);
+}
+.opasity_solid_red {
+  text-decoration: underline solid rgb(214, 35, 57, 0.5);
+}
+.opasity_dashed_red {
+  text-decoration: underline dashed rgb(214, 35, 57, 0.5);
+}
+.opasity_dotted_red {
+  text-decoration: underline dotted rgb(214, 35, 57, 0.5);
+}
+.opasity_solid_grey {
+  text-decoration: underline solid rgb(131, 140, 149, 0.5);
+}
+.opasity_dashed_grey {
+  text-decoration: underline dashed rgb(131, 140, 149, 0.5);
+}
+.opasity_dotted_grey {
+  text-decoration: underline dotted rgb(131, 140, 149, 0.5);
+}
+.small {
+  color: #838c95;
+  font-size: 11px;
+}
+.links-inner h3 {
+  font-size: 24px;
+}
+.field-inner {
+  font-family: Sans-serif;
+  padding-bottom: 45px;
+}
+.div_input {
+  font-size: 15px;
+  margin-bottom: 23px;
+}
+.field-inner h3 {
+  padding-top: 6px;
+  font-size: 25px;
+}
+.small-text {
+  font-size: 10px;
+  padding-left: 14px;
+  padding-top: 5px;
+}
+.input-field {
+  padding-left: 10px;
+  width: 206px;
+  height: 35px;
+  box-sizing: border-box;
+  border: 1px solid #e6e6e6;
+  border-radius: 4px;
+  outline: none;
+}
+
 /* Скрытие стандартной иконки
 input[type="date"]::-webkit-inner-spin-button,
 input[type="date"]::-webkit-calendar-picker-indicator {
@@ -239,139 +309,160 @@ input[type="date"] {
     background: url('/picture/calendar.png') no-repeat 5px right;
     background-size: 20px;
     padding-left: 35px; /* Убедитесь, что ваша иконка не перекрывает текст */
-    /* height: 30px; /* Установите желаемую высоту поля ввода */
-    /* width: 150px; Установите желаемую ширину поля ввода */
-    /* border: 1px solid #ccc; */
-    /* border-radius: 4px; */
-    /* padding: 5px; */
-    /* box-sizing: border-box; */ 
-/* } */ 
-.div_calendar{
-    display: flex;
-    border: 1px solid #e6e6e6;
-    justify-content: space-between;
-    width:133px;
-    height:30px;
-    align-items: center;
-    border-radius:4px;
-    padding:0 10px;
-}
-.div_calendar img{
-    width:18px;
-    height:18px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.input_text{
-    font-size: 15px;
-}
-.bloks h3{
-    font-size: 27px;
-    margin: 0;
-    margin-bottom: 35px;
-}
-.row1,.row2{
-    display:flex;
-}
-.row1{
-    margin-bottom: 19px;
-}
-.row2{
-    margin-bottom:20px;
-}
-.block1{
-    background-color:white;
-    width:268px;
-    height:218px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    display:flex;
-    margin-right:15px;
-}
-.block2{
-    width:217px;
-    height:209px;
-    border:5px solid #fadf52;
-}
-.div_block_text{
-    max-width: 247px;
-    padding: 20px 17px;
-    font-size: 16px;
-}
-.block3{
-width:220px;
-height:200px;
-border:5px solid #d6e0e2;
-margin-right:14px;
-}
-.block4{
-    width:220px;
-    height:210px;  
-    background: #f3f3f3; 
-}
-.block5{
-    display:flex;
-    align-items: center;
-    height:50px;
-    width:244px;
-    padding-left:28px;
-    background:#fadf52;
-}
-.block6{
-    height: 169px;
-    width: 210px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-left: 5px solid #fadf52;
-    border-right: 5px solid #fadf52;
-    border-bottom: 5px solid #fadf52;
-    padding-left: 26px;
-    padding-right: 26px;
-    margin: 0;
-    font-size: 16px;
+/* height: 30px; /* Установите желаемую высоту поля ввода */
+/* width: 150px; Установите желаемую ширину поля ввода */
+/* border: 1px solid #ccc; */
+/* border-radius: 4px; */
+/* padding: 5px; */
+/* box-sizing: border-box; */
+/* } */
+/* input[type="date"] ::-webkit-calendar-picker-indicator {
+        background-image: url(/picture/calendar.png);
+        background-size: 19px;
+        background-repeat: no-repeat;
+        /* background-position-y: bottom; */
+/* background-position: 128px 7px; */
+/* } */
 
-}
-.bloks-inner{
-    padding-bottom: 60px;
-    border-bottom: 2px solid #cbcbcb;
-}
-.line1{
-    display: flex;
-    padding-top: 37px;
-    padding-bottom: 15px;
-    border-bottom: 3px double #fadf52;
-    font-size: 12px;
-    font-weight: 600;
-}
-.line2,.line3{
-    display:flex;
-    padding-right:40px;
-}
-.r{
-width:40px;
-height:10px;
-padding:40px;
-}
-.table-inner h3{
-    margin: 0;
-    font-size: 27px;
-    padding-top: 22px;
+.sd-container {
+  position: relative;
+  float: left;
 }
 
-.r1{
-    width: 50px;
-    padding-right:12px;
+.sd {
+  padding: 5px 10px;
+  height: 17px;
+  width: 150px;
 }
-.r2{
-    width:176px;
-    padding-right:16px;
+
+.open-button {
+    position: absolute;
+    top: 7px;
+    right: 8px;
+    width: 26px;
+    height: 15px;
+    background: #fff;
+    pointer-events: none;
 }
-.r3{
-    width:155px;
-    padding-right:25px;
+.open-button img{
+    width:100%;
+    height:100%;
 }
-.line2{
-    padding-bottom:10px;
-    padding-top:10px;
+
+.open-button button {
+  border: none;
+  background: transparent;
+}
+.input_text {
+  font-size: 15px;
+}
+.bloks h3 {
+  font-size: 27px;
+  margin: 0;
+  margin-bottom: 35px;
+}
+.row1,
+.row2 {
+  display: flex;
+}
+.row1 {
+  margin-bottom: 19px;
+}
+.row2 {
+  margin-bottom: 20px;
+}
+.block1 {
+  background-color: white;
+  width: 268px;
+  min-height: 218px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  display: flex;
+  margin-right: 15px;
+}
+.block2 {
+  width: 217px;
+  min-height: 209px;
+  border: 5px solid #fadf52;
+}
+.div_block_text {
+  max-width: 247px;
+  padding: 20px 17px;
+  font-size: 16px;
+}
+.block3 {
+  width: 220px;
+  min-height: 200px;
+  border: 5px solid #d6e0e2;
+  margin-right: 14px;
+}
+.block4 {
+  width: 220px;
+  min-height: 210px;
+  background: #f3f3f3;
+}
+.block5 {
+  display: flex;
+  align-items: center;
+  min-height: 50px;
+  width: 244px;
+  padding-left: 28px;
+  background: #fadf52;
+}
+.block6 {
+  min-height: 169px;
+  width: 210px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-left: 5px solid #fadf52;
+  border-right: 5px solid #fadf52;
+  border-bottom: 5px solid #fadf52;
+  padding-left: 26px;
+  padding-right: 26px;
+  margin: 0;
+  font-size: 16px;
+}
+.bloks-inner {
+  padding-bottom: 60px;
+  border-bottom: 1px solid #cbcbcb;
+}
+.line1 {
+  display: flex;
+  padding-top: 37px;
+  padding-bottom: 15px;
+  border-bottom: 3px double #fadf52;
+  font-size: 12px;
+  font-weight: 600;
+}
+.line2,
+.line3 {
+  display: flex;
+  padding-right: 40px;
+}
+.r {
+  width: 40px;
+  height: 10px;
+  padding: 40px;
+}
+.table-inner h3 {
+  margin: 0;
+  font-size: 27px;
+  padding-top: 22px;
+}
+
+.r1 {
+  width: 50px;
+  padding-right: 12px;
+}
+.r2 {
+  width: 176px;
+  padding-right: 16px;
+}
+.r3 {
+  width: 155px;
+  padding-right: 25px;
+}
+.line2 {
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
