--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,14 @@ body {
 p{
   margin: 0;
 }
-
+.container,.content-container{
+  width: 100%; /* Устанавливаем ширину на 100% */
+  max-width: 951px;
+}
 .container {
   padding: 0 35px;
   max-width: 951px;
+  margin:0 auto;
 }
 .header-inner {
   border-bottom: 1px solid #cbcbcb;
@@ -92,6 +96,7 @@ button {
   cursor: pointer;
 }
 
+
 .div_btn_twice1,
 .div_btn_twice2,
 .div_btn_twice3 {
@@ -163,6 +168,15 @@ background:rgb(244 ,25 ,57,0.5);
 .big_yellow:hover{
   box-shadow:none;
   background:rgb(255, 225, 82,0.5);
+}
+.field-btn:disabled{
+  box-shadow: none;
+  background:rgb(255, 225, 82,0.5);
+  cursor:not-allowed;
+}
+.field-btn:not(:disabled){
+  background: #fbdc50;
+  cursor:pointer;
 }
 
 .links-inner {
@@ -476,16 +490,16 @@ input[type="date"] {
 }
 
 .form-input .placeholder {
-  color: #999999;
+  color: black;
 }
 .form-input{
   display: flex;
-  align-items: center;
   margin-bottom: 10px;
 }
 .form-input label{
   margin-right: 30px;
   width:170px;
+  display: flex;
 }
 .form-input input{
   width:376px;
@@ -499,6 +513,7 @@ input[type="date"] {
   width:376px;
   height: 170px;
   outline: none;
+  resize: none;
 }
 .checkbox{
   font-size: 15px;
@@ -520,6 +535,12 @@ input[type="date"] {
 .text_in_ankets span{
   text-decoration: underline solid #c0bbc1;
 }
+.text_in_ankets label::after{
+  content:",";
+}
+#phone-required::after{
+  content:".";
+}
 #ankets{
   font-size: 27px;
   padding-top: 27px;
@@ -527,17 +548,38 @@ input[type="date"] {
   margin-bottom: 30px;
 }
 .link-navigation{
-  display: flex;
-  flex-direction: column;
-  margin-right: 30px;
-  padding-top: 21px;
+
+  width: 200px;
 }
 .div_ankets{
   display:flex;
 }
 .link-navigation a{
-  color:blue;
+  color: #389bec;
 }
 .link-navigation a:hover{
   text-decoration: none;
+}
+.content-container { /* Отступ слева для контента, чтобы он не перекрывал ссылки */
+  padding: 20px; /* Поля для контента */
+}
+.wriper{
+  display:flex;
+  flex-direction: row;
+}
+.left-wriper{
+  position: sticky;
+  height: min-content;
+  top:0;
+}
+.right-wriper{
+  margin:0 auto;
+}
+#required-fields-msg {
+  display: inline; /* По умолчанию элемент отображается */
+}
+
+/* Этот селектор нужен для того, чтобы убедиться, что элементы с классом "-required" корректно скрываются */
+[id$="-required"] {
+  display: inline; /* По умолчанию элементы отображаются */
 }
