--- a/css/style.css
+++ b/css/style.css
@@ -600,29 +600,31 @@ background:rgb(244 ,25 ,57,0.5);
   font-size: 13px;
   color:#c0bbc1;
 }
-.text_in_ankets label{
-  text-decoration: underline solid #c0bbc1;
+.text_in_ankets label {
   cursor: pointer;
+  position: relative; /* Ensure the pseudo-element is positioned correctly */
 }
-.text_in_ankets label:hover{
-  color:red;
-  text-decoration: none;
+
+.text_in_ankets label span {
+  text-decoration: underline solid #c0bbc1;
 }
 
 .text_in_ankets label::after {
   content: "";
 }
-.text_in_ankets span{
+
+.text_in_ankets label.comma::after {
+  content: ",";
+  text-decoration: none;
+}
+
+.text_in_ankets label.period::after {
+  content: ".";
+  text-decoration: none;
+}
+
+.text_in_ankets span {
   white-space: nowrap;
-}
-
-/* Эти стили больше не нужны */
-.text_in_ankets label[id$="-required"]::after {
-  content: "";
-}
-
-.text_in_ankets label[id$="-required"]:last-child::after {
-  content: "";
 }
 
 #ankets{
